Implemented lazy loading of WebApi, AuthService and activeSubscription, jxbrowser and ResultPanel to speed up startup time of the GUI.